--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MCZT7N37FR"></script>
     <script>
@@ -58,25 +59,25 @@
 
     <ul class="links-list">
         <li>
-            <a href="">
+            <a href="" class="active">
                 Desenvolvimento Web Fullstack
                 <span>Curso de programação web para iniciantes (do zero).</span>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="active">
                 Fábrica de Aplicativos - React Native
                 <span>Curso de desenvolvimento de aplicativos para iniciantes (do zero).</span>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="active">
                 Desenvolvimento de Games
                 <span>Curso completo - Aprenda a Criar e Programar Jogos Completos em 2D e 3D!</span>
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" class="active">
                 Workshop Gratuito - React Native - do zero ao app
                 <span>Aprenda criar aplicativos poderosos para Android e iOS.</span>
             </a>
